@@ -1,3 +1,9 @@
+2003-10-23  Bruno Haible  <bruno@clisp.org>
+
+	* read-stringtable.c (read_string, stringtable_parse): Cast
+	gram_pos.line_number to 'unsigned long'.
+	* x-sh.c (read_word): Case line_number to 'unsigned long'.
+
 2003-10-21  Bruno Haible  <bruno@clisp.org>
 
 	* message.h (message_list_msgids_changed): New declaration.
